# final-project

./: .env.example  .gitignore  0.13.0  AGENTS.md  README.md  list_models_tmp.py  pyproject.toml  requirements.txt  temp_patch.txt  test_call.py
aiprojects.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: agent_schema.py  config.py  graph.py  graph_v2.py  ideogram_tools.py  index.html  library.py  main.py  models.py  nodes.py  nodes_v2.py  palette.py  prompt_engine.py  recommendations.py  task_classifier.py  utils.py
backend/: .env_example  .gitignore  README.md  Untitled-1.ini  requirements.txt  run_ngrok.py  vector_state.py
backend/app/: main.py  test_kanana_safeguard.py
chroma_db/: chroma.sqlite3
final-project-develop/frontend/: README.md  index.html  streamlit_app.py
frontend/: README.md  index.html  streamlit_app.py  tailwind.config.ts  tailwind.config_BACKUP_1447.ts  tailwind.config_LOCAL_1447.ts  vite.config.ts
frontend/src/: App.tsx  index.css
guardrails_server/: README.md  main.py  requirements.txt
guardrails_server/guardrails/: kanana_safeguard.py
makery-canvas/src/: App.tsx  index.css
makery_metrics_service/: .gitignore  GlobalUsings.cs  Program.cs  README.md  Worker.cs  install-service.bat  makery_metrics_service.csproj  makery_metrics_service.slnx  uninstall-service.bat
scripts/: analyze_logos.py  build_logo_embeddings.py  run_v2_demo.py
src/: App.tsx  index.css
tests/: check_mask.py  check_mask_values.py  test_ideogram_edit.py  test_ideogram_remix.py
trend_agent/: build_db.py  jina_markdown.py  testttt2.py  url.txt
(+2218 files in other folders)
