[project]
name = "aiprojects"
version = "0.1.0"
description = "Ideogram logo workflow with LangGraph and LangChain-based prompt planning."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit<1.30",
    "streamlit-drawable-canvas",
    "numpy",
    "requests",
    "pillow",
    "python-dotenv",
    "openai",
    "langgraph",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langsmith>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.0",
    "langchain>=1.0.5",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"

[tool.uv]
package = true
